[package]
name = "wincon_logger"
version = "0.1.0"
authors = ["Janis Böhm <j4nisboehm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winapi = {version = "0.3.9" , features = ["windef", "winuser", "minwindef", "consoleapi", "wincon", "processenv"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
colored = "2.0.0"
log = "0.4.14"
